# server-client

./: CMakeLists.txt  GNUmakefile  README.md
client/: client_thread.c  client_thread.h  main.c
common/: common.h
server/: main.c  server_thread.c
